fixed alignment and added material ui

--- a/hardikpthv/src/components/social/Social.css
+++ b/hardikpthv/src/components/social/Social.css
@@ -17,5 +17,5 @@
 
 .social .list .list-item img:hover {
   padding: 10px;
-  transform: scale(1.2);
+  transform: scale(1.1);
 }
